<resources>
    <string name="app_name">CleanMaster</string>


    <!-- Splash WelcomeScreen -->

    <string name="api_error">An error occurred while loading the posts</string>

    <!-- WelcomeScreen -->
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="aboutus">About\nUs</string>
    <string name="service_provided">Services\nProvided</string>
    <string name="ourteam">Our\nTeam</string>

    <!-- SignIn Screen -->

    <string name="welcome_back">WELCOME BACK PARTNER</string>
    <string name="signin_clean">Sign in to Clean</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="start_cleaning">Start Cleaning</string>
    <string name="having_trouble">Having Trouble?</string>
    <string name="not_you">Not you? SignUp</string>

    <!-- Signup Screen -->
    <string name="join_us">Join us to Clean</string>
    <string name="hint_name">Name</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_con_pass">Confirm Password</string>
    <string name="hint_bill_add">Billing Address</string>
    <string name="already_been">Already been cleaning? SignIn</string>

    <!-- HomeScreen -->
    <string name="wat_can_we">What can we help with?</string>
    <string name="menu_history">History</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>


    <!-- Cleaning Screen -->
    <string name="enter_exact">Enter Exact Area</string>
    <string name="cont">Continue</string>

</resources>
