<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_grey"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcomeback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/gotham_boldita"
        android:text="@string/welcome_back"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <TextView
        android:id="@+id/tvSignInClean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/gotham_medium"
        android:text="@string/signin_clean"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeback" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/hint_email"
        android:textColorHint="@color/app_color"
        app:backgroundTint="@color/colorPrimaryDark"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/tvSignInClean">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/gotham_book"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/app_color"
            android:textColorHint="@color/app_color"
            android:textSize="@dimen/_14sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/hint_pass"
        android:textColorHint="@color/app_color"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:passwordToggleDrawable="@drawable/pass_toggle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/gotham_book"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="18"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/app_color"
            android:textColorHint="@color/app_color"
            android:textSize="@dimen/_14sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvHavingTrouble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/having_trouble"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPass" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@id/tvHavingTrouble"
        app:layout_constraintStart_toStartOf="@id/tvHavingTrouble"
        app:layout_constraintTop_toBottomOf="@id/tvHavingTrouble" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/rounded_border_aquagreen"
        android:fontFamily="@font/gotham_bold"
        android:gravity="center"
        android:paddingStart="@dimen/_50sdp"
        android:paddingEnd="@dimen/_50sdp"
        android:text="@string/start_cleaning"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <TextView
        android:id="@+id/tvNotYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/not_you"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignin" />


</androidx.constraintlayout.widget.ConstraintLayout>